--- a/sobre.html
+++ b/sobre.html
@@ -23,6 +23,7 @@
                     <ul>
                         <a href="index.html">𝑺𝑶𝑩𝑹𝑬</a>
                         <a href="sobre.html">𝑫𝑰𝑺𝑪𝑰𝑷𝑳𝑰𝑵𝑨𝑺</a>
+                        <a href="mate.html">Matematica I</a>
                        
                     </ul>
                 </nav>
