--- a/sobre.html
+++ b/sobre.html
@@ -38,7 +38,7 @@
 </body>
 </html>
 
-   <a href="mate.html">Matematica I</a>
+   <p class="texto1">𝑴𝒂𝒕𝒆𝒎𝒂𝒕𝒊𝒄𝒂 </p> <a href="mate.html">Matematica I</a>
     <p class="texto1">𝑭𝒊𝒔𝒊𝒄𝒂 𝑰</p>
     <p class="texto1">𝑴𝒂𝒕𝒆𝒎𝒂𝒕𝒊𝒄𝒂 </p>
     <p class="texto1">𝑴𝒂𝒕𝒆𝒎𝒂𝒕𝒊𝒄𝒂 𝑰𝑰</p>
