--- a/sobre.html
+++ b/sobre.html
@@ -38,11 +38,10 @@
 </body>
 </html>
 
-   <p class="texto1">𝑴𝒂𝒕𝒆𝒎𝒂𝒕𝒊𝒄𝒂 </p> <a href="mate.html">Matematica I</a>
+   <p class="texto1">𝑴𝒂𝒕𝒆𝒎𝒂𝒕𝒊𝒄𝒂 𝑰</p> <a href="mate.html">Matematica I</a>
     <p class="texto1">𝑭𝒊𝒔𝒊𝒄𝒂 𝑰</p>
-    <p class="texto1">𝑴𝒂𝒕𝒆𝒎𝒂𝒕𝒊𝒄𝒂 </p>
     <p class="texto1">𝑴𝒂𝒕𝒆𝒎𝒂𝒕𝒊𝒄𝒂 𝑰𝑰</p>
-    <p class="texto1">𝑬𝒅𝒖𝒄𝒂𝒄̧𝒂̃𝒐 𝑭𝒊𝒏𝒂𝒏𝒄𝒆𝒊𝒓𝒂 </p>
+
     
 
 
