--- a/sobre.html
+++ b/sobre.html
@@ -39,8 +39,8 @@
 </html>
 
    <p class="texto1">𝑴𝒂𝒕𝒆𝒎𝒂𝒕𝒊𝒄𝒂 𝑰</p> <a href="mate.html">Matematica I</a>
-    <p class="texto1">𝑭𝒊𝒔𝒊𝒄𝒂 𝑰</p>
-    <p class="texto1">𝑴𝒂𝒕𝒆𝒎𝒂𝒕𝒊𝒄𝒂 𝑰𝑰</p>
+    <p class="texto1">𝑭𝒊𝒔𝒊𝒄𝒂 𝑰</p><a href="fisica.html">Matematica I</a>
+    <p class="texto1">𝑴𝒂𝒕𝒆𝒎𝒂𝒕𝒊𝒄𝒂 𝑰𝑰</p><a href="matei.html">Matematica I</a>
 
     
 
