--- a/sobre.html
+++ b/sobre.html
@@ -38,9 +38,9 @@
 </body>
 </html>
 
-   <p class="texto1">𝑴𝒂𝒕𝒆𝒎𝒂𝒕𝒊𝒄𝒂 𝑰</p> <a href="mate.html">Matematica I</a>
-    <p class="texto1">𝑭𝒊𝒔𝒊𝒄𝒂 𝑰</p><a href="fisica.html">Matematica I</a>
-    <p class="texto1">𝑴𝒂𝒕𝒆𝒎𝒂𝒕𝒊𝒄𝒂 𝑰𝑰</p><a href="matei.html">Matematica I</a>
+   <a href="mate.html">𝑴𝒂𝒕𝒆𝒎𝒂𝒕𝒊𝒄𝒂 𝑰</a>
+   <a href="fisica.html">𝑭𝒊𝒔𝒊𝒄𝒂 𝑰</a>
+  <a href="matei.html">𝑴𝒂𝒕𝒆𝒎𝒂𝒕𝒊𝒄𝒂 𝑰𝑰</a>
 
     
 
