--- a/mate.html
+++ b/mate.html
@@ -25,9 +25,8 @@
         <div id="navegacao">
             <nav>
                 <ul>
-                    <a href="mate.html">Matematica I</a>
-                  
-                    
+                    <a href="index.html">𝑺𝑶𝑩𝑹𝑬</a>
+                    <a href="sobre.html">𝑫𝑰𝑺𝑪𝑰𝑷𝑳𝑰𝑵𝑨𝑺</a>
                 </ul>
             </nav>
         </div>
