--- a/mate.html
+++ b/mate.html
@@ -32,7 +32,75 @@
         </div>
 </section>    
 </header>
+<p>class=”…“ – Atribui uma classe ao elemento (uma classe pode ser utilizada para um ou mais elementos);<br>
+id=”…“ – Atribui um id ao elemento (um id deve ser único, ou seja atribuído a um único elemento);<br>
+style=”…” – Permite incluir elementos CSS (estilos) dentro da tag;<br>
+lang=”…” – Define o idioma principal do elemento;<br>
+title=”…” – Define o título do elemento;<br>
+alt=”…” – Define um texto alternativo e, por isso, é muito utilizado em imagens, auxilia nas práticas de SEO;<br>
+hidden – Oculta o elemento;<br>
+align=”…” – Permite definir o padrão de alinhamento desse elemento, como por exemplo: right, center, left e justify;<br>
+width=”…” – Define uma largura para o elemento;<br>
+height=”…” – Define uma altura para o elemento.<br>
 
+!DOCTYPE html – A tag !DOCTYPE informa ao navegador a versão do HTML que está sendo utilizada no documento. Por exemplo: no HTML5, basta incluir !DOCTYPE html, e assim o navegador já saberá que se trata de um documento na versão HTML5;<br>
+html – Esta tag é o elemento básico da estrutura do HTML. Assim sendo, ela conterá todos os elementos do seu documento. Todo documento HTML deve iniciar e finalizar com essa tag;<br>
+head – Essa tag delimita o cabeçalho do documento. Não possui nenhum valor visível, porém é capaz de transmitir ao navegador diversas informações muito úteis e essenciais a uma boa apresentação do seu documento HTML;<br>
+title– Essa tag define o título da sua página, o nome que aparecerá na sua aba, janela ou guia. Por esta razão, a tag >title> é de grande importância para o SEO;<br>
+meta – Essa tag permite inserir metadados ao seu documento, no caso acima, a informação charset=”UTF-8″, que garante a compatibilidade do código com os caracteres de padrão latino americano;<br>
+body – Finalmente, a tag que representa o corpo do documento. Em síntese, é nessa tag que todos os elementos visíveis do seu site devem ser inseridos.<br>
+
+header– Essas tags definem um cabeçalho. Portanto, todo conteúdo que estiver dentro dela faz parte de um cabeçalho, podendo ser utilizado dentro de outras sessões. Não confundir com as tags head;<br>
+main – Essas tags representam o conteúdo principal do seu corpo, ou seja, o conteúdo relacionado diretamente com o tópico central da página ou com a funcionalidade central da aplicação;<br>
+footer – Essas tags definem um rodapé para a página, geralmente utilizadas no final da página;<br>
+section– Essas tags definem uma sessão para sua página;<br>
+article – Essas tags definem um artigo da sua página. Nesse sentido, são utilizadas para separar o conteúdo da sua página. Muito utilizado principalmente por blogs ou páginas de conteúdo;<br>
+aside – Essas tags representam uma seção de uma página cujo conteúdo é tangencialmente relacionado ao conteúdo do seu entorno, que poderia ser considerado separado do conteúdo;<br>
+nav– Essa tag define um conteúdo de navegação. Portanto, é muito utilizado em conjunto com listas e na criação de menus;<br>
+div – Define uma divisão da página. Desta forma, funciona como um container para conteúdo de fluxo. Uma vez que não possui um valor semântico, é muito utilizado para organizar melhor o conteúdo. Anteriormente ao HTML5, era utilizado no lugar das categorias acima.<br>
+
+Tags HTML de título<br>
+As tags de título possuem valor semântico, variando entre seis níveis hierárquicos. Para fins de otimização SEO é importante entender como funcionam, e fazer uma utilização adequada. Para definir títulos, utilizamos as tags:<br>
+
+h1 - Título de maior valor hierárquico<br>
+h2<br>
+h3<br>
+h4<br>
+h5<br>
+h6- Título de menor valor hierárquico<br>
+
+p – Principal tag de texto, compõe um parágrafo;<br>
+span – Apesar de ter uma funcionalidade e características parecidas com os parágrafos, costumam ser utilizadas apenas para pequenas informações, como legendas de um formulário, legendas de uma imagem, etc. Também pode ser utilizada para formar um container;<br>
+pre – Tag utilizada para representar texto pré-formatado. Muito utilizada para inserir códigos;<br>
+b – Transforma o conteúdo em negrito;<br>
+i – Transforma o conteúdo em itálico;<br>
+br– Essa tag não necessita de fechamento, ela executa a função de quebra de linha.<br>
+hr – Essa tag não necessita de fechamento, ela forma uma linha horizontal.<br>
+
+img
+Essa tag não necessita de fechamento, serve para incluir uma imagem ao seu texto. A partir dessa tag, utilizamos o atributo src=”” onde deve ser digitado o local em que a imagem se encontra. Também é muito utilizado em conjunto com o atributo alt para definir o texto alternativo da imagem.<br>
+
+Por exemplo:<br>
+
+<img src="imagens/imagem1.jpg" alt="imagem 1 da minha página"><br>
+
+Tags HTML de listas<br>
+Para poder criar uma lista, podemos utilizar uma lista ordenada, a partir das tags ol, ou uma lista não ordenada, a partir das tags <ul></ul>. Posteriormente, incluímos dentro da lista os elementos da mesma, dentro das tags li.<br>
+
+
+
+Tags de estilos e scripts<br>
+
+Para podermos concluir esse tutorial, não poderíamos deixar de citar as tags style e script.<br>
+
+
+
+A tag style deve ser incluída no <head> do seu código HTML. Dentro dessa tag, é possível incluir todo o seu código CSS, ou seja, seu código de estilos.<br>
+
+
+
+Já a tag script tem como objetivo incluir códigos de scripts ao seu HTML, podendo ser incluída em qualquer parte. Contudo, recomenda-se fortemente que seja inserida após o <footer>. Dessa forma, podemos incluir nela um código javascript.<br>
+</p>
 </body>
 </html>
 
