--- a/sobre.html
+++ b/sobre.html
@@ -38,8 +38,8 @@
 </body>
 </html>
 
-   <a href="mate.html">𝑴𝒂𝒕𝒆𝒎𝒂𝒕𝒊𝒄𝒂 𝑰</a>
-   <a href="fisica.html">𝑭𝒊𝒔𝒊𝒄𝒂 𝑰</a>
+   <a href="mate.html">𝑴𝒂𝒕𝒆𝒎𝒂𝒕𝒊𝒄𝒂 𝑰</a><br>
+   <a href="fisica.html">𝑭𝒊𝒔𝒊𝒄𝒂 𝑰</a><br>
   <a href="matei.html">𝑴𝒂𝒕𝒆𝒎𝒂𝒕𝒊𝒄𝒂 𝑰𝑰</a>
 
     
