--- a/mate.html
+++ b/mate.html
@@ -32,6 +32,7 @@
         </div>
 </section>    
 </header>
+<h1>Principais tags:</h1><br><br>
 <p>class=”…“ – Atribui uma classe ao elemento (uma classe pode ser utilizada para um ou mais elementos);<br>
 id=”…“ – Atribui um id ao elemento (um id deve ser único, ou seja atribuído a um único elemento);<br>
 style=”…” – Permite incluir elementos CSS (estilos) dentro da tag;<br>
