--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <img class="Estudante-yas" src='https://mail-attachment.googleusercontent.com/attachment/u/0/?ui=2&ik=761997b1c4&attid=0.2&permmsgid=msg-f:1763832907812460120&th=187a64af394e5658&view=att&disp=safe&realattid=187a648403ce5ba08032&saddbat=ANGjdJ83p9it0VMG1--bqhjnFnPlGNXo0tHA3pNrgoQBk9qAaU8YEFuDJP-f1Q8n6akPOG5iOn785F76eO2WGJgps2HZ8lgM328iRyJhZJTLSPviczAJyuKzNyAga0m_cFGJf6AlQ9j7T6AT7S_i_fu01DrjSWWMGmXhWX6jOnmqYAhZc8TfCzOqGMW7yQ3601Fd5ag6dy_wZdsBwTPRd_TT5gRoo5Preu8bxSVv-bk1vBnh2dpQkIQeX2C8qh7LMUlVJUJsWdAMOjEBj0OTC6nXiUXFkA4jV1QTjWFc9FmUY4pBciYznzi9xcnHU04Sv6nn6Uh4b4hJoVdD3HTorwyXgy5vOdA3iP3F1Reif0aTLfgXWLg4FTbkzvj_y9tNQmZBgD9mnTvIsQyK4Wog1FQ0FJaeSkYrZ0eMVSmd0GBvekXslu88qHtJE1WB1nYD9Ra5RHlOFg423BF7LFb_jRbhNmcais0PPIInEvEs_pf-VlJXlt-fOjFTA55Hv26nWqnxtkdAwGwh7q0f4D8lwUa529jG01HTtqe5O7geI9Cf3KaYKmDC90GYAcBbl4SU9k1czX84BjCG-ZVUU3ZPisqYY3An3hP6Yt8sYBB6WUI6RApCNMTtS6i-004FbB--GP6laHh92akq2shB1asDZ1R7Ft9NiR9ZJDh0dKYd-9aJc8-mDRAWKRcTpoXvyUI-78zCpZTPvcwBRx6qFzyZCQiFDcaNaQGptK2oL6nkF9bap9FExEL83dMYh9M42tmYc9QslbN_4E2KqYzSB4II7-UME2u2EH2s7CxYb8dp1SudeTyg24_YpfMZX8PyFnz4QL0QmB8k7JVwxlD1cEX_iwIqaPLGU471_Q1ImyA0Z4epBoH0uiKiGFzEZQZDFn0k7nCy677sCEg1j9A0hi_5CK38AaztNuQ_TBAJB7C-8_ZjN90TJwWwZK4Hs1C6_4RlDdX8ebiPqm5RpEOcQT66kXYUqha_k5PB00OGFit9NLYHWImmLEJdikx2gKygGcqUzADbMTiV_8dIpZxfBemX' alt="foto gu">
            <h3 class="estudante-nome">𝓨𝓪𝓼𝓶𝓲𝓷</h3>
            <p class="texto4">𝓿𝓲𝓶 𝓹𝓪𝓻𝓪 𝓮𝔁𝓪𝓽𝓪𝓼 𝓹𝓻𝓲𝓷𝓬𝓲𝓹𝓪𝓵𝓶𝓮𝓷𝓽𝓮𝓹𝓮𝓵𝓪𝓼 𝓬𝓲ê𝓷𝓬𝓲𝓪𝓼 𝓭𝓪 𝓷𝓪𝓽𝓾𝓻𝓮𝔃𝓪.     
-            <𝓫𝓻>𝓐𝓹𝓮𝓼𝓪𝓻 𝓭𝓮 𝓮𝓼𝓽𝓪𝓻 𝓮𝓶 𝓮𝔁𝓪𝓽𝓪𝓼 𝓽𝓪𝓶𝓫é𝓶 𝓰𝓸𝓼𝓽𝓸 𝓶𝓾𝓲𝓽𝓸 𝓭𝓮 𝓪𝓻𝓽𝓮𝓼, 𝓹𝓻𝓲𝓷𝓬𝓲𝓹𝓪𝓵𝓶𝓮𝓷𝓽𝓮 𝓿𝓲𝓼𝓾𝓪𝓲𝓼.</p>
+            𝓐𝓹𝓮𝓼𝓪𝓻 𝓭𝓮 𝓮𝓼𝓽𝓪𝓻 𝓮𝓶 𝓮𝔁𝓪𝓽𝓪𝓼 𝓽𝓪𝓶𝓫é𝓶 𝓰𝓸𝓼𝓽𝓸 𝓶𝓾𝓲𝓽𝓸 𝓭𝓮 𝓪𝓻𝓽𝓮𝓼, 𝓹𝓻𝓲𝓷𝓬𝓲𝓹𝓪𝓵𝓶𝓮𝓷𝓽𝓮 𝓿𝓲𝓼𝓾𝓪𝓲𝓼.</p>
 
      
        </div>
