--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
                     
                 </ul>
             </nav>
+            <section class="banner">
+                <h2 class="banne_titulo">Já viu os novos projeto?</h2>
+                <p class="banner__texto">Procure o trabalho que você gostaria de ler!</p>
+                <input type="search" class="banner pesquisa" placeholder="O que você procura?">
+            </section>
         </div>
 </section>    
 </header>
