--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="estudante-div">
         <img class="Estudante-mah" src='https://mail-attachment.googleusercontent.com/attachment/u/0/?ui=2&ik=761997b1c4&attid=0.1&permmsgid=msg-f:1767407172571337652&th=18871775969793b4&view=att&disp=safe&realattid=18871771db1946dbff51&saddbat=ANGjdJ9tPVeh_oLgzyd8ovBzHViYMZc_YtecNKuNVniy3U1NEz85W8NSJnZCbelh6EFkOsSBcjRSDoK_JEgNHVlPck5zLKDKVqXsWGsCfMJF_4soZfKAPZgCuy3roMIdUFNis8BJ0eBEMOSPktlQB7xSLF7hP01Gc_Dx5ZFd1bvrSXa8r_JPHMIAVbevXHhcd6_hWB5dbdPzfTxGttQpufuKuUSfHFkwErHN3J9ovbjRGVhO3gB44OH0kjbNVncvIdbL_mPWQ3hkxdZHVFNonOnyzzrsua-ijFKCDfvfX7wd3Xtq32usFTkUCDvI0RfNnjf-lKGZo96AwIRP_A-Zoem85L2kgizovZaKBw39bf2aS2EJRelGNc-IJ4ekrTX9U_D5kd6kN_oYiMd6ULv7h3RGUJTSDRn6hS1ZH9EHX0hOtAklE1tMnsPvYi65m85u-kBgotS0Hj5c385xf-XzmAQLUMai6ixh-f-VaP_zbcaHcmCqZQNxeXHan-GPxtX0UI_4g0XXQ5kDajond_L9UyasBzTy_DKJsU0lHtJoGOAh9yONhK9cYfDYbbz6masOkRiOLRi58kVfetRtYXYs3hzVb1BbDUPU2oJ8RX5dpen_M-82JTbgLJXTuo6HNriw-R447nBfXkeIbaysabOtNV_STd2gVvZKtHKWx6hFIW1YlVBn-a0mIC9ACUzqWIMQA9puGcGIZIv44cXOj5hKW6rOeiWLuGWTfaAH3CGgfliEeobKNlvHDT3CUPqwr49WA4hQB8nJMXEJrajSdtdAVGJxU03T4RP0fpNpJoM_1WWUcbMOvGvamqY-zk0v5u0fnorP-b2MbKB7csE5A2Kxk777zRuuTKb2uUHg81BKuUxRR2ZVFF7Ci_l1-xSmecIgCJY2sjxXRw_HJB014ZBuhF0MEoxXtjkbkLGJcqmhZoEE30T2EjvC9uHravnugykjYeZgIkAoiyvl3FnbtreMorlXGtYb3q9Cv_ItHCYHxHhqBCgmN9W4A0Xa0lAO4Q8' alt="IMG_20230514_201304_554.webp">
            <h3 class="estudante-nome">𝓜𝓪𝓻𝓲𝓪 𝓔.</h3>
-           <p class="texto3">Tenho 15 anos, sou o 2I. Me interesso por arte, livros, música, biologia e dança. Pretendo cursar medicina.</p>
+           <p class="texto3">Tenho 15 anos, sou do 2I. Me interesso por arte, livros, música, biologia e dança. Pretendo cursar medicina.</p>
 
 
        </div>
